# training-rust-logger

./: Cargo.toml  LICENSE  README.md
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/simplelog/: all.html  index.html  sidebar-items.js  struct.Logger.html
docs/simplelog/backend/: index.html  sidebar-items.js  struct.Backend.html
docs/simplelog/types/: enum.LogLevel.html  enum.LoggingMessage.html  index.html  sidebar-items.js  struct.LoggingChannel.html
docs/src/simplelog/: backend.rs.html  lib.rs.html  types.rs.html
src/: backend.rs  lib.rs  types.rs
